--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,24 @@ html, body {
     overflow: hidden;
     background-color: #FFF;
 }
+#paper {
+    background-color: #ffffcc;
+}
+
+#fakeextent {
+    position: absolute;
+    width: 256px;
+    height: 256px;
+    left: 128px;
+    top: 128px;
+    border: solid 1px #000;
+    user-select: none;
+    pointer-events: none;
+}
+
+#offset-label {
+    font-size: 0.6em;
+}
 
 body:-webkit-full-screen {
     width: 100%;
@@ -32,7 +50,7 @@ body:fullscreen {
 
 .sidebar {
     position: fixed;
-    left: 0;
+    right: 0;
     top: 0;
     width: 4em;
     height: 100%;
