--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ body:fullscreen {
 }
 
 .active {
-    text-shadow: 1px 1px 10px #0099ff;
+    text-shadow: 1px 1px 20px #10aaff;
 }
 
 .panel-tool {
