--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
 html, body {
     margin: 0px;
     padding: 0px;
+    height: 100%;
     font-family: 'Helvetica Neue', 'Helvetica', 'Open Sans', sans-serif;
     overflow: hidden;
     background-color: #EFEDE0;
@@ -99,17 +100,18 @@ body:fullscreen {
 }
 
 .colorbutton {
-    margin-top: 1em;
-    text-shadow: 1px 1px 10px #ffffff;
     color: rgba(0, 0, 0, 0.6);
-    font-size: 3em; 
+    font-size: 4em; 
 }
 
 .panel {
-    background-color: #363636;
+    position: absolute;
+    left: 4em;
+    top: 6em;
+    background-color: rgba(60,60,60,0.9);
     width: 20em;
-    height: auto;
-    box-shadow: #363636 1px 1px 10px; 
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 #cursors {
@@ -124,6 +126,26 @@ body:fullscreen {
     background:url('../images/pointer.png') no-repeat -4px 0;
     z-index: 8;
 }
+.tool-rack {
+    width: 20em;
+    background-color: rgba(60,60,60,0.9);
+    position: absolute;
+    left: 4em;
+    top: 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    z-index: 10;
+}
+
+.tool-rack .tool {
+    float: left;
+    margin-right: 0.4em;
+    margin-left: 0.4em;
+}
+
+.hidden {
+    display: none;
+}
 
 /*********
 * get responsive */
@@ -132,30 +154,106 @@ body:fullscreen {
         left: initial;
         top: initial;
         bottom: 0px;
-        height: 4em;
+        height: 4.5em;
         width: 100%;
         right: 0px;
     }
 
     .panel {
-        position: relative;
-        background-color: #363636;
-        width: 20em;
-        height: auto;
-        box-shadow: #363636 1px 1px 10px;
-        top: -50em;
+        top: -12.5em;
+        border-radius: 0px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        box-shadow: 1px 1px 10px #464646;
     }
 
     .sidebar div {
         float: left;
         margin-left: 1em;
     }
-
-    .sidebar .panel {
-        position: relative;
-        top: -14em;
-    }
     .fullscreen {
         display: none;
     }
+    .tool-rack {
+        border-radius: 6px;
+        box-shadow: #363636 1px 1px 4px;
+        background-color: rgba(60,60,60,1.0);
+    }
+
+    .tool {
+        font-size: 3em;
+    }
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 18px 0;
+    width: 90%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: #3071a9;
+    border-radius: 1.3px;
+}
+input[type=range]::-webkit-slider-thumb {
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -14px;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: #3071a9;
+    border-radius: 1.3px;
+}
+input[type=range]::-moz-range-thumb {
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #2a6495;
+    border-radius: 2.6px;
+}
+input[type=range]::-ms-fill-upper {
+    background: #3071a9;
+    border-radius: 2.6px;
+}
+input[type=range]::-ms-thumb {
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #3071a9;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #367ebd;
 }
