--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,16 @@ body:fullscreen {
     margin-bottom: 0.2em;
 }
 
+.move-tool {
+    font-size: 2.5em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
+
+.eraser-tool {
+    color: #f884a7
+}
+
 .colorbutton {
     color: rgba(0, 0, 0, 0.6);
     font-size: 4em; 
