--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,15 @@ body:fullscreen {
     text-shadow: 1px 1px 20px #10aaff;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .panel-tool {
     font-size: 2.5em;
     margin-top: 0.2em;
