--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,9 +75,7 @@ body:fullscreen {
     color: #FFF;
     font-family: 'Helvetica Neue', 'Open Sans', sans-serif;
     font-weight: 300;
-    font-size: 0.8em;
     text-align: center;
-    /*box-shadow: #464646 0px 0px 20px;*/
     z-index: 9;
 }
 
@@ -190,11 +188,15 @@ body:fullscreen {
     }
 
     .panel {
-        top: -12.5em;
+        top: -9.4em;
         border-radius: 0px;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
         box-shadow: 1px 1px 10px #464646;
+    }
+
+    .brush-tools {
+        top: -11.7em;
     }
 
     .sidebar div {
@@ -239,7 +241,7 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 input[type=range]::-webkit-slider-thumb {
     height: 36px;
-    width: 16px;
+    width: 20px;
     border-radius: 3px;
     background: #ffffff;
     cursor: pointer;
@@ -257,7 +259,7 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
     border: 1px solid #000000;
     height: 36px;
-    width: 16px;
+    width: 20px;
     border-radius: 3px;
     background: #ffffff;
     cursor: pointer;
@@ -282,7 +284,7 @@ input[type=range]::-ms-fill-upper {
 }
 input[type=range]::-ms-thumb {
     height: 36px;
-    width: 16px;
+    width: 20px;
     border-radius: 3px;
     background: #ffffff;
     cursor: pointer;
