--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,9 +22,9 @@ html, body {
   top: 0px;
   width: 4em;
   height: 100%;
-  background-color: #464646;
-  background-color: rgba(60,60,60,0.9);
-  color: #FFF;
+  background-color: #eee;
+  background-color: rgba(240,240,240,0.5);
+  color: #555;
   font-family: 'Helvetica Neue', 'Open Sans', sans-serif;
   font-weight: 300;
   text-align: center;
@@ -71,12 +71,25 @@ html, body {
   color: #f884a7
 }
 
-#colorbutton {
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 4em;
-}
-
 
 .hidden {
   display: none;
+}
+
+.colorpanel {
+  position: absolute;
+  left: 4.5em;
+  top: 5em;
+}
+
+.panel {
+  position: absolute;
+  left: 4em;
+  top: 6em;
+  background-color: rgba(60,60,60,0.9);
+  width: 20em;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  text-align: left;
+  padding: 0.5em;
 }
