Moved file structure around, removed gulp
Moving towards a more standard layout for react/webpack/node

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,7 @@
+@import url('/css/vendor/font-awesome.css');
+@import url('/css/vendor/pnotify.brighttheme.css');
+@import url('/css/vendor/ionicons.css');
+
 /** Globbal stuff */
 html, body {
   margin: 0px;
