--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,4 @@
 @import url('/css/vendor/font-awesome.css');
-@import url('/css/vendor/pnotify.brighttheme.css');
 @import url('/css/vendor/ionicons.css');
 
 /** Globbal stuff */
@@ -12,15 +11,8 @@ html, body {
 
 }
 
-/* DrawingCanvas component styling */
-.drawingcanvas {
-  //background-color: #EFEDE0;
-  //background-image: url('../images/seamlesspaper.jpg');
-  //background-repeat: repeat;
-}
-
 /* Toolbar component styling */
-.toolbar {
+.Toolbar {
   position: fixed;
   left: 0px;
   top: 0px;
@@ -33,61 +25,4 @@ html, body {
   font-weight: 300;
   text-align: center;
   z-index: 9;
-}
-
-.tool-rack {
-  width: 24em;
-  background-color: rgba(60,60,60,0.9);
-  position: absolute;
-  left: 4em;
-  top: 0px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  z-index: 10;
-}
-
-.tool-rack .tool {
-  float: left;
-  margin-right: 0.5em;
-  margin-left: 0.5em;
-}
-
-.move-tool {
-  font-size: 2.5em;
-  margin-top: 0.2em;
-  margin-bottom: 0.2em;
-}
-
-.panel-tool {
-  font-size: 2.5em;
-  margin-top: 0.2em;
-  margin-bottom: 0.2em;
-  color: #0099ff
-}
-
-.eraser-tool {
-  color: #f884a7
-}
-
-
-.hidden {
-  display: none;
-}
-
-.colorpanel {
-  position: absolute;
-  left: 4.5em;
-  top: 5em;
-}
-
-.panel {
-  position: absolute;
-  left: 4em;
-  top: 6em;
-  background-color: rgba(60,60,60,0.9);
-  width: 20em;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  text-align: left;
-  padding: 0.5em;
 }
