--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -45,6 +45,21 @@ html, body {
     }
 }
 
+/* Cursors */
+#cursors {
+    position:relative;
+    pointer-events: none; /* the irony */
+    z-index: 2;
+}
+
+#cursors .cursor {
+    position: absolute;
+    width:15px;
+    height:22px;
+    background:url('../../public/images/pointer.png') no-repeat -4px 0;
+    z-index: 8;
+}
+
 /* Toolbar component styling */
 .Toolbar {
   position: fixed;
