--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,16 @@ html, body {
   overflow: hidden;
 }
 
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
+}
+
 /* Expand the canvas out beyond the window viewport by length of tile on each
    side
 */
