Using html template to use CDN paths based on environment

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,6 +19,8 @@
 </head>
 <body>
 <div id="udrawapp"></div><!--react ui -->
-<script type="text/javascript" src="js/udraw-bundle.js"></script>
+<!--
+This should be included by the html-webpack-plugin
+ <script type="text/javascript" src="js/udraw-bundle.js"></script> -->
 </body>
 </html>
