add som docker stuff

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>udraw: Unlimited Multiplayer Drawing</title>
+    <title>udraw: Unlimited Draw</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta property="og:title" content="udraw: Multiplayer Drawing" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://udraw.me" />
     <meta property="og:description"
-          content="Draw in real time with others on an unlimited sized canvas" />
+          content="Draw in realtime with others on an unlimited sized canvas" />
     <meta property="og:image" content="https://udraw.me/static/images/og-image.png" />
     <meta property="og:image:secure_url" content="https://udraw.me/static/images/og-image.png" />
     <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
