--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,7 +19,7 @@
 </head>
 <body>
 <script src="https://cdn.ravenjs.com/3.12.0/raven.min.js" crossorigin="anonymous"></script>
-<script>Raven.config('<%= process.env.SENTRY_KEY %>').install();</script>
+<script>Raven.config('<%= process.env.SENTRY_PUBLIC_DSN %>').install();</script>
 <div id="udrawapp"></div><!--react ui -->
 <!--
 This should be included by the html-webpack-plugin
