--- a/lib/udraw_web/components/layouts/root.html.heex
+++ b/lib/udraw_web/components/layouts/root.html.heex
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title suffix=" · Phoenix Framework">
-      <%= assigns[:page_title] || "Udraw" %>
+    <.live_title default="Udraw" suffix=" · Phoenix Framework">
+      {assigns[:page_title]}
     </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/tailwind.css"} />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/css/udraw.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
@@ -54,6 +54,6 @@
         </li>
       <% end %>
     </ul>
-    <%= @inner_content %>
+    {@inner_content}
   </body>
 </html>
