--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,3 +2,11 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+.toolbar {
+    font-size: 3em;
+    margin: 0.2em;
+}
+
+.tool-active {
+    text-shadow: 0px 0px 10px #0DB6FF;
+}
