--- a/lib/udraw_web/controllers/page_html/udrawapplication.html.heex
+++ b/lib/udraw_web/controllers/page_html/udrawapplication.html.heex
@@ -1,2 +1,3 @@
 <div id="udrawapp"></div>
-<script type="text/javascript" src={~p"/assets/vendor/udraw/js/udraw.js"}></script>
+<script type="text/javascript" src={~p"/assets/vendor/udraw/js/udraw.js"}>
+</script>
